--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,6 @@ cmake_minimum_required(VERSION 3.24)
 
 project(turboq CXX)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-include(TurboQHelpers)
-
 if(NOT TARGET fmt::fmt)
   add_subdirectory(deps/fmt)
 endif()
@@ -17,6 +14,13 @@ endif()
 if(NOT TARGET doctest::doctest_with_main)
   add_subdirectory(deps/doctest)
 endif()
+if(NOT TARGET cxxopts::cxxopts)
+  add_subdirectory(deps/cxxopts)
+endif()
+
+# My modules
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+include(TurboQHelpers)
 
 enable_testing()
 
