--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,49 +16,49 @@ jobs:
         config:
           - {
               name: "gcc-12 debug",
-              os: ubuntu-latest,
+              os: ubuntu-22.04,
               build_type: Debug,
               cc: "gcc-12", cxx: "g++-12"
             }
           - {
               name: "gcc-12 release",
-              os: ubuntu-latest,
+              os: ubuntu-22.04,
               build_type: Release,
               cc: "gcc-12", cxx: "g++-12"
             }
           - {
               name: "gcc-13 debug",
-              os: ubuntu-latest,
+              os: ubuntu-22.04,
               build_type: Debug,
               cc: "gcc-13", cxx: "g++-13"
             }
           - {
               name: "gcc-13 release",
-              os: ubuntu-latest,
+              os: ubuntu-22.04,
               build_type: Release,
               cc: "gcc-13", cxx: "g++-13"
             }
           - {
               name: "clang-16 debug",
-              os: ubuntu-latest,
+              os: ubuntu-22.04,
               build_type: Debug,
               cc: "clang-16", cxx: "clang++-16"
             }
           - {
               name: "clang-16 release",
-              os: ubuntu-latest,
+              os: ubuntu-22.04,
               build_type: Release,
               cc: "clang-16", cxx: "clang++-16"
             }
           - {
               name: "clang-17 debug",
-              os: ubuntu-latest,
+              os: ubuntu-22.04,
               build_type: Debug,
               cc: "clang-17", cxx: "clang++-17"
             }
           - {
               name: "clang-17 release",
-              os: ubuntu-latest,
+              os: ubuntu-22.04,
               build_type: Release,
               cc: "clang-17", cxx: "clang++-17"
             }
