--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ endif()
 if(NOT TARGET doctest::doctest_with_main)
   add_subdirectory(deps/doctest)
 endif()
+if(NOT TARGET benchmark::benchmark_main)
+  add_subdirectory(deps/benchmark)
+endif()
 if(NOT TARGET cxxopts::cxxopts)
   add_subdirectory(deps/cxxopts)
 endif()
