--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,58 +13,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config:
-          - {
-              name: "gcc-12 debug",
-              os: ubuntu-22.04,
-              build_type: Debug,
-              cc: "gcc-12", cxx: "g++-12"
-            }
-          - {
-              name: "gcc-12 release",
-              os: ubuntu-22.04,
-              build_type: Release,
-              cc: "gcc-12", cxx: "g++-12"
-            }
-          - {
-              name: "gcc-13 debug",
-              os: ubuntu-22.04,
-              build_type: Debug,
-              cc: "gcc-13", cxx: "g++-13"
-            }
-          - {
-              name: "gcc-13 release",
-              os: ubuntu-22.04,
-              build_type: Release,
-              cc: "gcc-13", cxx: "g++-13"
-            }
-          - {
-              name: "clang-16 debug",
-              os: ubuntu-22.04,
-              build_type: Debug,
-              cc: "clang-16", cxx: "clang++-16"
-            }
-          - {
-              name: "clang-16 release",
-              os: ubuntu-22.04,
-              build_type: Release,
-              cc: "clang-16", cxx: "clang++-16"
-            }
-          - {
-              name: "clang-17 debug",
-              os: ubuntu-22.04,
-              build_type: Debug,
-              cc: "clang-17", cxx: "clang++-17"
-            }
-          - {
-              name: "clang-17 release",
-              os: ubuntu-22.04,
-              build_type: Release,
-              cc: "clang-17", cxx: "clang++-17"
-            }
+        build_type: ['Debug', 'Release']
+        os: ['ubuntu-22.04']
+          # sanitizer: ['asan', 'ubsan', 'tsan', 'msan']
+        compiler: ['gcc-12', 'gcc-13', 'clang-16', 'clang-17']
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
 
       - name: Download Ninja and CMake
         id: cmake_and_ninja
@@ -96,51 +51,59 @@ jobs:
             COMMAND chmod +x ${cmake_dir}/cmake
           )
 
-      - name: Install gcc-12
+      - name: install gcc-12
         id: install_gcc_12
-        if: startsWith(matrix.config.name, 'gcc-12')
+        if: matrix.compiler == 'gcc-12'
         shell: bash
         working-directory: ${{ env.HOME }}
         run: |
           sudo add-apt-repository ppa:ubuntu-toolchain-r/ppa -y
           sudo apt update
           sudo apt install -y g++-12 gcc-12
+          echo "CC=gcc-12" >> $GITHUB_ENV
+          echo "CXX=g++-12" >> $GITHUB_ENV
 
-      - name: Install gcc-13
+      - name: install gcc-13
         id: install_gcc_13
-        if: startsWith(matrix.config.name, 'gcc-13')
+        if: matrix.compiler == 'gcc-13'
         shell: bash
         working-directory: ${{ env.HOME }}
         run: |
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
           sudo apt update
           sudo apt install -y g++-13 gcc-13
+          echo "CC=gcc-13" >> $GITHUB_ENV
+          echo "CXX=g++-13" >> $GITHUB_ENV
 
-      - name: Install clang-16
+      - name: install clang-16
         id: install_clang_16
-        if: startsWith(matrix.config.name, 'clang-16')
+        if: matrix.compiler == 'clang-16'
         shell: bash
         working-directory: ${{ env.HOME }}
         run: |
           curl -O -L https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 16
+          echo "CC=clang-16" >> $GITHUB_ENV
+          echo "CXX=clang++-16" >> $GITHUB_ENV
 
       - name: Install clang-17
         id: install_clang_17
-        if: startsWith(matrix.config.name, 'clang-17')
+        if: matrix.compiler == 'clang-17'
         shell: bash
         working-directory: ${{ env.HOME }}
         run: |
           curl -O -L https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 17
+          echo "CC=clang-17" >> $GITHUB_ENV
+          echo "CXX=clang++-17" >> $GITHUB_ENV
 
-      - name: Configure
+      - name: configure
         shell: cmake -P {0}
         run: |
-          set(ENV{CC} ${{ matrix.config.cc }})
-          set(ENV{CXX} ${{ matrix.config.cxx }})
+          message(STATUS "CXX=$ENV{CXX}")
+          message(STATUS "CC=$ENV{CC}")
 
           set(ENV{PATH} "$ENV{GITHUB_WORKSPACE}:$ENV{PATH}")
 
@@ -152,20 +115,17 @@ jobs:
               -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
               -DCMAKE_MAKE_PROGRAM=ninja
               -DCMAKE_VERBOSE_MAKEFILE=ON
-              -DTurboQ_Sanitize=ON
-              ${{ matrix.config.cmake_args }}
             RESULT_VARIABLE result
           )
           if (NOT result EQUAL 0)
             message(FATAL_ERROR "Bad exit status")
           endif()
 
-      - name: Build
+      - name: build
         shell: cmake -P {0}
-        continue-on-error: ${{ matrix.config.experimental || false }}
+        continue-on-error: false
         run: |
           set(ENV{NINJA_STATUS} "[%f/%t %o/sec] ")
-
           set(ENV{PATH} "$ENV{GITHUB_WORKSPACE}:$ENV{PATH}")
 
           execute_process(
@@ -176,9 +136,9 @@ jobs:
             message(FATAL_ERROR "Bad exit status")
           endif()
 
-      - name: Run tests
+      - name: run tests
         shell: cmake -P {0}
-        continue-on-error: ${{ matrix.config.experimental || false }}
+        continue-on-error: false
         run: |
           include(ProcessorCount)
           ProcessorCount(N)
