--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,8 @@ env:
 
 jobs:
   build:
-    name: ${{matrix.config.name}}
-    runs-on: ${{matrix.config.os}}
+    name: ${{ matrix.os }}.${{ matic.compiler }}.${{ matrix.build_type }}
+    runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
       matrix:
