--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   build:
-    name: ${{ matrix.os }}.${{ matic.compiler }}.${{ matrix.build_type }}
+    name: ${{ matrix.os }}.${{ matrix.compiler }}.${{ matrix.build_type }}
     runs-on: ${{matrix.os}}
     strategy:
       fail-fast: false
