--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,15 @@ endif()
 
 include(cmake/TurboQHelpers.cmake)
 
+if(NOT TARGET fmt::fmt)
+  add_subdirectory(deps/fmt)
+endif()
+if(NOT TARGET Boost::outcome)
+  add_subdirectory(deps/boost_outcome)
+endif()
+if(NOT TARGET Boost::scope_exit)
+  add_subdirectory(deps/boost_scope_exit)
+endif()
 if(NOT TARGET doctest::doctest_with_main)
   add_subdirectory(deps/doctest)
 endif()
