some code for python

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,22 +7,22 @@ option(TURBOQ_SANITIZER "Build with sanitizer" OFF)
 
 include(cmake/TurboQHelpers.cmake)
 
-if(NOT TARGET fmt::fmt)
+if (NOT TARGET fmt::fmt-header-only)
   add_subdirectory(deps/fmt)
 endif()
-if(NOT TARGET Boost::outcome)
+if (NOT TARGET Boost::outcome)
   add_subdirectory(deps/boost_outcome)
 endif()
-if(NOT TARGET Boost::scope_exit)
+if (NOT TARGET Boost::scope_exit)
   add_subdirectory(deps/boost_scope_exit)
 endif()
-if(NOT TARGET doctest::doctest_with_main)
+if (NOT TARGET doctest::doctest_with_main)
   add_subdirectory(deps/doctest)
 endif()
-if(NOT TARGET benchmark::benchmark_main)
+if (NOT TARGET benchmark::benchmark_main)
   add_subdirectory(deps/benchmark)
 endif()
-if(NOT TARGET cxxopts::cxxopts)
+if (NOT TARGET cxxopts::cxxopts)
   add_subdirectory(deps/cxxopts)
 endif()
 
@@ -31,10 +31,9 @@ enable_testing()
 add_subdirectory(code)
 add_subdirectory(examples)
 
-if(TURBOQ_PYTHON)
-  if(NOT COMMAND nanobind_add_module)
+if (TURBOQ_PYTHON)
+  if (NOT COMMAND nanobind_add_module)
     add_subdirectory(deps/nanobind)
   endif()
-
   add_subdirectory(python)
 endif()
