--- a/deps/boost_outcome/CMakeLists.txt
+++ b/deps/boost_outcome/CMakeLists.txt
@@ -1,3 +1,9 @@
+if (TARGET Boost::boost)
+  add_library(boost_outcome INTERFACE)
+  target_link_libraries(boost_outcome INTERFACE Boost::boost)
+  add_library(Boost::outcome ALIAS boost_outcome)
+endif()
+
 include(FetchContent)
 FetchContent_Declare(Boost
   URL https://github.com/boostorg/boost/releases/download/boost-1.86.0/boost-1.86.0-cmake.tar.xz
@@ -7,10 +13,5 @@ FetchContent_Declare(Boost
 FetchContent_MakeAvailable(Boost)
 
 if (NOT TARGET Boost::outcome)
-  if (NOT TARGET Boost::boost)
-    message(FATAL_ERROR "target Boost::outcome not found")
-  endif()
-  add_library(boost_outcome INTERFACE)
-  target_link_libraries(boost_outcome INTERFACE Boost::boost)
-  add_library(Boost::outcome ALIAS boost_outcome)
+  message(FATAL_ERROR "target Boost::outcome not found")
 endif()
