--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -12,7 +12,7 @@ target_compile_options(${TargetName}
 target_include_directories(${TargetName}
   PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(${TargetName}
-  PUBLIC fmt::fmt-header-only Boost::outcome Boost::scope_exit)
+  PUBLIC fmt::fmt-header-only Boost::outcome)
 
 if (TURBOQ_PYTHON)
   set_property(TARGET ${TargetName}
