--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         build_type: [ 'Debug', 'Release' ]
         os: [ 'ubuntu-24.04' ]
-        compiler: [ 'gcc-14', 'clang-19' ]
+        compiler: [ 'gcc-14', 'clang-19', 'clang-20' ]
 
     steps:
       - uses: actions/checkout@v4
@@ -73,6 +73,18 @@ jobs:
           sudo ./llvm.sh 19
           echo "CC=clang-19" >> $GITHUB_ENV
           echo "CXX=clang++-19" >> $GITHUB_ENV
+
+      - name: install clang-20
+        id: install_clang_20
+        if: matrix.compiler == 'clang-20'
+        shell: bash
+        working-directory: ${{ env.HOME }}
+        run: |
+          curl -O -L https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 20
+          echo "CC=clang-20" >> $GITHUB_ENV
+          echo "CXX=clang++-20" >> $GITHUB_ENV
 
       - name: configure
         shell: cmake -P {0}
