--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,7 +2,7 @@ set(TargetName spsc_pub)
 
 add_executable(${TargetName} ${TargetName}.cpp)
 target_compile_features(${TargetName}
-  PUBLIC cxx_std_20)
+  PUBLIC cxx_std_23)
 set_target_properties(${TargetName}
   PROPERTIES
     CXX_STANDARD_REQUIRED ON
@@ -10,4 +10,4 @@ set_target_properties(${TargetName}
 target_compile_options(${TargetName}
   PUBLIC -Wall -Wextra -Wattributes -Wpedantic -Wstrict-aliasing -Wcast-align -g)
 target_link_libraries(${TargetName}
-  PUBLIC fmt::fmt turboq::turboq)
+  PUBLIC turboq::turboq)
