--- a/deps/doctest/CMakeLists.txt
+++ b/deps/doctest/CMakeLists.txt
@@ -2,6 +2,6 @@ include(FetchContent)
 FetchContent_Declare(doctest
   URL https://github.com/doctest/doctest/archive/refs/tags/v2.4.12.tar.gz
   EXCLUDE_FROM_ALL
-  DOWNLOAD_EXTRACT_TIMESTAMP ON
+  SYSTEM
 )
 FetchContent_MakeAvailable(doctest)
