--- a/deps/benchmark/CMakeLists.txt
+++ b/deps/benchmark/CMakeLists.txt
@@ -3,7 +3,7 @@ include(FetchContent)
 FetchContent_Declare(benchmark
   URL https://github.com/google/benchmark/archive/refs/tags/v1.8.4.tar.gz
   EXCLUDE_FROM_ALL
-  DOWNLOAD_EXTRACT_TIMESTAMP ON
+  SYSTEM
 )
 
 set(BENCHMARK_ENABLE_GTEST_TESTS FALSE)
