--- a/deps/cxxopts/CMakeLists.txt
+++ b/deps/cxxopts/CMakeLists.txt
@@ -2,6 +2,6 @@ include(FetchContent)
 FetchContent_Declare(cxxopts
   URL https://github.com/jarro2783/cxxopts/archive/refs/tags/v3.2.0.tar.gz
   EXCLUDE_FROM_ALL
-  DOWNLOAD_EXTRACT_TIMESTAMP ON
+  SYSTEM
 )
 FetchContent_MakeAvailable(cxxopts)
